<resources>
    <string name="app_name">LR启动器</string>
    <string name="action_search_app">搜索</string>
    <string name="action_hide_apps">隐藏应用</string>
    <string name="action_hide_app">隐藏应用</string>
    <string name="action_settings">应用设置</string>
    <string name="action_root">ROOT工具箱</string>
    <string name="action_exit">退出应用</string>
    <string name="action_enable">启动应用</string>
    <string name="action_del_black">移除黑名单</string>
    <string name="action_disable">冻结应用</string>
    <string name="action_uninstall">卸载应用</string>
    <string name="activity_hide_applist_title">隐藏应用</string>
    <string name="action_show_app">显示应用</string>
    <string name="action_share">分享给好友</string>
    <string name="action_refresh">刷新</string>
    <string name="action_sort">应用排序</string>
    <string name="action_sync_app">同步应用</string>
    <string name="action_backup">备份</string>
    <string name="action_restore">恢复</string>
    <string name="action_backup_and_restore">备份/恢复</string>
    <string name="action_black_clear">启用所有应用</string>
    <string name="action_close_black">关闭黑名单</string>
    <string name="action_disable_enable_and_del">启动应用并移除</string>
    <string name="action_create_desktop_icon">创建桌面图标</string>
    <string name="action_clear">清除无用数据</string>
    <string name="action_user">用户中心</string>
    <string name="action_about">关于我们</string>
    <string name="action_tutorial">使用教程</string>
    <string name="action_advice">意见反馈</string>
    <string name="action_bug_level">日志记录</string>
    <string name="action_update">检查更新</string>
    <string name="action_close_app">关闭应用</string>
    <string name="action_create_desktop_close_all">创建一键冻结快捷方式</string>
    <string name="title_warning">提示</string>
    <string name="cancel">取消</string>
    <string name="ok">确定</string>
    <string name="title_activity_about">关于我们</string>
    <string name="action_online">官方网站</string>
    <string name="action_hide_clear">清空隐藏应用</string>
    <string name="action_add_bat">批量添加</string>
    <string name="action_select_all">全选</string>
    <string name="action_select_none">全不选</string>
    <string name="action_select_path">选择路径</string>
    <string name="action_select_reset">重置</string>
    <string name="action_clear_hide_apps">清空隐藏</string>
    <string name="action_clear_black_apps">清空黑名单</string>
    <string name="action_select_all_apps">所有应用</string>
    <string name="action_select_system">系统应用</string>
    <string name="action_add_black_and_hide_app_bat">批量设置黑名单和隐藏应用</string>
    <string name="action_select_user">用户应用</string>
    <string name="action_sort_by_name_asc">按名称升序排序</string>
    <string name="action_sort_by_name_desc">按名称降序排序</string>
    <string name="action_sort_by_enable_status_asc">按启用状态升序排序</string>
    <string name="action_sort_by_enable_status_desc">按启用状态降序排序</string>
    <string name="title_activity_add_bat">批量添加</string>
    <string name="title_activity_install_app_bat">批量安装应用</string>
    <string name="title_activity_uninstall_app_bat">批量卸载应用</string>
    <string name="title_activity_add_common_use_app_bat">批量设置常用应用</string>
    <string name="title_activity_font_manage">字体管理</string>
    <string name="title_activity_font_info">字体信息</string>
    <string name="sdcard_not_mounted">存储卡未挂载</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="downloading">正在下载</string>
    <string name="update_title">版本升级</string>
    <string name="downloading_error">下载新版本出错了！</string>
    <string name="drawer_open">打开</string>
    <string name="drawer_close">关闭</string>
    <string name="app_setting_share_binding">绑定分享平台</string>
    <string name="title_activity_backup_and_restore">备份/恢复</string>
    <string name="action_more_app">更多应用</string>
    <string name="title_activity_web_view">浏览器</string>
    <string name="action_back">后退</string>
    <string name="action_close">关闭</string>
    <string name="action_forward">前进</string>
    <string name="action_home">首页</string>
    <string name="action_open_in_browser">用浏览器打开</string>
    <string name="pref_title_show_notification">显示通知栏</string>
    <string name="pref_title_boot_start">开机运行</string>
    <string name="pref_show_disable_dialog">新安装应用显示冻结对话框</string>
    <string name="pref_show_fragments">显示界面设置</string>
    <string name="action_welcome">功能介绍</string>
    <string name="pref_title_limit_running_app">限制运行的黑名单</string>
    <string name="pref_title_show_ball">显示悬浮球</string>
    <string name="title_activity_advice">意见反馈</string>
    <string name="title_activity_login">用户登录</string>
    <string name="title_activity_register">用户注册</string>
    <string name="title_activity_user">用户中心</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载&#8230;</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="xlistview_header_hint_success">刷新成功</string>
    <string name="not_updated_yet">暂未更新过</string>
    <string name="updated_at">上次更新于%1$s前</string>
    <string name="updated_just_now">刚刚更新</string>
    <string name="time_error">时间有问题</string>
    <string name="title_activity_change_pwd">修改密码</string>
    <string name="dialog_title_setting_font_size">设置列表字体大小</string>
    <string name="dialog_title_setting_column_portrait">设置竖屏每行显示应用数</string>
    <string name="dialog_title_setting_column_landscape">设置横屏每行显示应用数</string>
    <string name="dialog_title_setting_float_ball">悬浮球设置</string>
    <string name="cb_show_float_ball">显示悬浮球</string>
    <string name="dialog_title_setting_show_fragments">主界面设置</string>
    <string name="title_begin">开始之前</string>
    <string name="role_content">        开始之前，请先阅读本条例，若因未遵守本条例造成的后果与本软件作者无关。\n1，本软件需要获取ROOT权限才能发挥软件强大的功能，因手机未ROOT获未授予本软件ROOT权限只能作为普通的应用启动器使用；\n2，在获得ROOT权限后本软件作者向用户承诺不滥用ROOT权限，除了必要的操作需要ROOT权限其他的操作绝不会需要ROOT权限；\n3，关于本软件下载方式，可以通过LR官方网站下载，官方网址是http://appuser.lrapps.cn ，或者通过正规的应用商店下载，目前可以已上架的应用商店包括“应用宝”；\n4，本软件是免费软件，不会以任何形式收费；</string>
    <string name="accept_role">接受以上条例</string>
    <string name="btn_accept">接受</string>
    <string name="btn_decline">拒绝</string>
    <string name="dialog_title_bug_level">日志记录级别</string>
    <string name="auto_update_log">自动上报错误日志</string>
    <string name="log_tips">提示：日志级别越高记录的信息越详细，可以让开发者更全面的定位错误，但记录的越详细相应的日志文件则越大，建议选择级别3</string>
    <string name="dialog_title_create_backup">创建备份</string>
    <string name="backup_to_server">备份到服务器</string>
    <string name="input_remark">请输入备注：</string>
    <string name="about_content">        LR启动器是一款软件管理软件，旨在让用户更好的管理已安装的软件，用户在root后可以对任意安装的软件进行禁止管理，被禁止的软件犹如未安装一样，不会在后台运行，减少了软件在后台占用内存的问题，大大提高系统的流畅性。\n\n使用本软件有如下优势：\n1，可用内存增加，系统运行更加流畅：通过禁止不需要驻留后台的和一些系统服务（对一些系统关键服务请谨慎冻结，否则会造成开不了机或关键服务停止运行）；\n2，更省电：由于没有了不必要的后台服务，所以耗电量相应的减少了，待机时间会更长；\n3，更省流量：因禁止的应用既不会后台自启，所以也就不会连接网络，因而更省流量；</string>
    <string name="wechart">关注公众号：\nLRapps</string>
    <string name="qq_group">QQ群讨论：\n41756449</string>
    <string name="alipay">支付宝账号：\nlibit0909@139.com</string>
    <string name="wechart_title">关注公众号</string>
    <string name="qq_group_title">QQ群讨论</string>
    <string name="alipay_title">支付宝账号</string>
    <string name="wechart_content">LRapps</string>
    <string name="qq_group_content">41756449</string>
    <string name="alipay_content">libit0909@139.com</string>
    <string name="title_activity_root_tools">ROOT工具箱(试验)</string>
    <string name="font_preview_content">第一关：特殊符号\n
☽☾☿♄♃♁♅♆♇♈♕♖♗♘♜♟♞♝♝\n
第二关：商标图案\n
⠀⠁⠂⠃⠄⠅⠆⠇⠈⠉⠊⠋⠌⠍⠎⠏⠒⠑⠐\n
第三关：韩文\n
두근 두근거려 밤에 잠도 못 이루죠\n
第四关：俄语\n
Дом мой достроен\n
第五关：泰语\n
วันจันทร์ฉันคอยอยู่ วันอังคารก็คอยดู</string>
</resources>
