<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ActivityMain">
    <item
        android:id="@+id/action_close_black"
        android:icon="@drawable/ic_close"
        android:orderInCategory="100"
        android:title="@string/action_close_black"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_hide_apps"
        android:icon="@drawable/ic_hide"
        android:orderInCategory="101"
        android:title="@string/action_hide_apps"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/ic_sort"
        android:orderInCategory="102"
        android:title="@string/action_sort"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_refresh"
        android:orderInCategory="102"
        android:title="@string/action_sync_app"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_search_app"
        android:orderInCategory="103"
        android:title="@string/action_search_app"
        android:visible="false"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_add_bat"
        android:orderInCategory="103"
        android:title="@string/action_add_bat"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings"
        android:orderInCategory="104"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_root"
        android:icon="@drawable/ic_settings"
        android:orderInCategory="104"
        android:title="@string/action_root"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_backup"
        android:orderInCategory="105"
        android:title="@string/action_backup"
        android:visible="false"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_restore"
        android:orderInCategory="106"
        android:title="@string/action_restore"
        android:visible="false"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_black_clear"
        android:orderInCategory="107"
        android:title="@string/action_black_clear"
        android:visible="false"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_hide_clear"
        android:orderInCategory="108"
        android:title="@string/action_hide_clear"
        android:visible="false"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_about"
        android:icon="@android:drawable/ic_menu_info_details"
        android:orderInCategory="109"
        android:title="@string/action_about"
        android:visible="false"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_update"
        android:icon="@drawable/ic_refresh"
        android:orderInCategory="110"
        android:title="@string/action_update"
        android:visible="false"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_welcome"
        android:orderInCategory="111"
        android:title="@string/action_welcome"
        android:visible="false"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_share"
        android:actionProviderClass="android.widget.ShareActionProvider"
        android:orderInCategory="112"
        android:title="@string/action_share"
        android:visible="false"/>
    <item
        android:id="@+id/action_create_desktop_close_all"
        android:orderInCategory="113"
        android:title="@string/action_create_desktop_close_all"
        android:visible="false"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_exit"
        android:orderInCategory="114"
        android:title="@string/action_exit"
        app:showAsAction="never"/>
</menu>
