<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="cn.lrapps.android.ui.ActivityAddBlackAndHideAppBat">
    <item
        android:id="@+id/action_select_all"
        android:orderInCategory="100"
        android:title="@string/action_select_all"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_select_none"
        android:orderInCategory="100"
        android:title="@string/action_select_none"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_select_system"
        android:orderInCategory="100"
        android:title="@string/action_select_system"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_select_user"
        android:orderInCategory="100"
        android:title="@string/action_select_user"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_select_reset"
        android:orderInCategory="100"
        android:title="@string/action_select_reset"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_clear_hide"
        android:orderInCategory="100"
        android:title="@string/action_clear_hide_apps"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_clear_blacks"
        android:orderInCategory="100"
        android:title="@string/action_clear_black_apps"
        app:showAsAction="never"/>
</menu>
