<menu
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_enable_hide_app"
        android:orderInCategory="101"
        android:title="@string/action_hide_app"/>
    <item
        android:id="@+id/action_enable_enable"
        android:orderInCategory="102"
        android:title="@string/action_enable"/>
    <item
        android:id="@+id/action_enable_disable"
        android:orderInCategory="103"
        android:title="@string/action_disable"/>
    <item
        android:id="@+id/action_enable_uninstall"
        android:orderInCategory="104"
        android:title="@string/action_uninstall"/>
    <item
        android:id="@+id/action_enable_create_desktop_icon"
        android:orderInCategory="105"
        android:title="@string/action_create_desktop_icon"/>
</menu>
