<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Libit保留所有版权，如有疑问联系QQ：308062035
  ~ Copyright (c) 2015.
  -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="40dp"
        android:background="@drawable/bg_corner_10"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center"
            android:text="@string/dialog_title_bug_level"
            android:textColor="@color/black"
            android:textSize="18sp"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:scaleType="fitXY"
            android:src="@drawable/line"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="12dp"
            android:layout_marginLeft="5.0dp"
            android:layout_marginRight="5.0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical">
            <ListView
                android:id="@+id/list_bug_levels"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:divider="#ffeeebeb"
                android:dividerHeight="1dp"
                android:fadingEdge="none"
                android:footerDividersEnabled="false"
                android:headerDividersEnabled="false"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:scrollbars="none"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:scaleType="fitXY"
                android:src="@drawable/line"/>
            <CheckBox
                android:id="@+id/cb_bug_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:button="@drawable/checkbox"
                android:text="@string/auto_update_log"
                android:textColor="@color/black"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/log_tips"
                android:textColor="@color/black"
                android:textSize="12sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="vertical">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:scaleType="fitXY"
                android:src="@drawable/line"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="0dp">
                <Button
                    android:id="@+id/dialog_btn_ok"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@null"
                    android:text="@string/ok"
                    android:textColor="@color/black"
                    android:textSize="18sp"/>
                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="1dp"
                    android:background="@color/line_height"/>
                <Button
                    android:id="@+id/dialog_btn_cancel"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@null"
                    android:text="@string/cancel"
                    android:textColor="@color/black"
                    android:textSize="18sp"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>