<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Libit保留所有版权，如有疑问联系QQ：308062035
  ~ Copyright (c) 2016.
  -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="40dp"
        android:background="@drawable/bg_corner_10"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center"
            android:text="@string/title_begin"
            android:textColor="@color/black"
            android:textSize="18sp"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:scaleType="fitXY"
            android:src="@drawable/line"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8.0dp"
                    android:layout_marginRight="5.0dp"
                    android:gravity="center_vertical"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/tv_message"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:autoLink="web"
                        android:gravity="center_vertical"
                        android:text="@string/role_content"
                        android:textColor="@color/black"
                        android:textSize="18sp"/>
                </LinearLayout>
            </ScrollView>
            <CheckBox
                android:id="@+id/cb_accept"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:layout_marginTop="6dp"
                android:button="@drawable/checkbox"
                android:text="@string/accept_role"
                android:textColor="@color/black"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/line"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="0dp">
                    <Button
                        android:id="@+id/dialog_btn_ok"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@null"
                        android:text="@string/btn_accept"
                        android:textColor="@color/black"
                        android:textSize="18sp"/>
                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="1dp"
                        android:background="@color/line_height"/>
                    <Button
                        android:id="@+id/dialog_btn_cancel"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@null"
                        android:text="@string/btn_decline"
                        android:textColor="@color/black"
                        android:textSize="18sp"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>