<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Libit保留所有版权，如有疑问联系QQ：308062035
  ~ Copyright (c) 2015.
  -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="40dp"
        android:background="@drawable/bg_corner_10"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center"
            android:text="@string/dialog_title_create_backup"
            android:textColor="@color/black"
            android:textSize="18sp"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:scaleType="fitXY"
            android:src="@drawable/line"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:layout_marginLeft="5.0dp"
                android:layout_marginRight="5.0dp"
                android:layout_marginTop="12dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:minHeight="60dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/input_remark"
                    android:textColor="@color/black"
                    android:textSize="14sp"/>
                <EditText
                    android:id="@+id/et_comment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="14sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:layout_marginLeft="5.0dp"
                android:layout_marginRight="5.0dp"
                android:layout_marginTop="5dp"
                android:gravity="center_vertical"
                android:orientation="vertical">
                <CheckBox
                    android:id="@+id/cb_backup_server"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:button="@drawable/checkbox"
                    android:checked="true"
                    android:text="@string/backup_to_server"
                    android:textColor="@color/black"/>
            </LinearLayout>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:scaleType="fitXY"
                android:src="@drawable/line"/>
            <LinearLayout
                android:id="@+id/dialog_layout_buttons"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/dialog_btn_ok"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@null"
                    android:text="@string/ok"
                    android:textColor="@color/black"
                    android:textSize="18sp"/>
                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="1dp"
                    android:background="@color/line_height"/>
                <Button
                    android:id="@+id/dialog_btn_cancel"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@null"
                    android:text="@string/cancel"
                    android:textColor="@color/black"
                    android:textSize="18sp"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>